Using actual url

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
     <!-- Move the script here and add defer attribute -->
     <script
       defer
-      src="https://127.0.0.1:8000/chatbot.js?customerId=80d37a75-d5b8-4c25-b774-2f46705efbee"
+      src="https://app.andoria.ai/chatbot.js?customerId=80d37a75-d5b8-4c25-b774-2f46705efbee"
     ></script>
   </body>
 </html>
