--- a/index.html
+++ b/index.html
@@ -177,9 +177,19 @@
     </footer>
 
     <!-- Move the script here and add defer attribute -->
-    <script
+    <!-- <script
       defer
       src="https://app.andoria.ai/chatbot.js?customerId=80d37a75-d5b8-4c25-b774-2f46705efbee"
+    ></script> -->
+    <script
+      defer
+      src="https://127.0.0.1:8000/chatbot.js?customerId=80d37a75-d5b8-4c25-b774-2f46705efbee"
     ></script>
   </body>
 </html>
+
+<!-- https://app.andoria.ai/chatbot.js?customerId=70a30757-6947-430c-a7ab-6ef89da77f06 -->
+<!-- <script
+  defer
+  src="https://app.andoria.ai/chatbot.js?customerId=70a30757-6947-430c-a7ab-6ef89da77f06"
+></script> -->
