--- a/work.html
+++ b/work.html
@@ -46,7 +46,7 @@
         <h3>
           <b><a href="https://romelabs.co/api">Rome Labs</a></b>
         </h3>
-        <p>Knowledge agents- 🤫</p>
+        <p>Knowledge agents- </p>
         <p>Building cool stuff. If interested in learning more, hmu <a href="mailto:ani@romelabs.co">here</a></p>
       </div>
 
