motherfucker onboarding fuckign issue fuck

--- a/work.html
+++ b/work.html
@@ -39,7 +39,7 @@
     <header id="banner">
       <h2><a href="index.html">Anirudh Ramprasad</a> | Work</h2>
     </header>
-    <main id="content">
+    <main id="content" style="min-height: 500px; min-width: 300px;">
       <p>Here are some of the cool places I've worked at.</p>
       <!-- <h4><i>Verilog/SystemVerilog</i></h4> -->
       <div class="experience">
